# agendable-meeting-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: unit-tests.yml
app/: exceptions.py  main.py
app/api/routes/: recurrence_routes.py
app/core/: decorators.py  dependencies.py  redis_client.py
app/db/: db.py
app/db/models/: base.py  recurrence.py  relationships.py
app/db/repositories/: base_repo.py  meeting_repo.py  task_repo.py
app/services/: base_service.py  meeting_service.py  recurrence_service.py  task_service.py
tests/services/: test_meeting_service.py  test_recurrence_service.py  test_task_service.py
