[project]
name = "agendable-meeting-service"
version = "0.1.0"
description = "Agendable Meeting Service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "databases>=0.9.0",
    "fastapi[standard]>=0.115.8",
    "greenlet>=3.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pre-commit>=4.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "python-dateutil>=2.9.0.post0",
    "redis[asyncio]>=5.2.1",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
exclude = [
    "**/__init__.py",
    "**/alembic/versions/**"
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "async-asgi-testclient>=1.4.11",
    "factory-boy>=3.3.3",
    "isort>=6.0.0",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.6",
]
